﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2006-12-27 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, libraries/common.lib.php: patch #1592366,
     possibility of using the host name as a parameter in the URL,
     thanks to Arnold Daniels

2006-12-26 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: set $local_query only if we are exporting data
    * export.php, libraries/export/latex.php, /sql.php, /htmlword.php,
      /odt.php, lang/*: bug #1621280, VIEW dependencies during export

2006-12-20 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/sql.php: bug #1619647, export of query results
      should not contain procedure definitions
    * navigation.php, test/theme.php,  browse_foreigners.php,
      libraries/header_printview.inc.php: patch #1611684 part 2, client 
      caching of phpmyadmin.css.php, thanks to Christian Schmidt

2006-12-19 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * tbl_change.php, tbl_replace.php, include/tbl_replace_fields.inc.php:
      refactored: made register_globals independent; added documentation;
      removed unused code; fixed bug #1597686 last insert id message wrong;
      much more i don't remember ...
    * libarsies/common.lib.php::PMA_showMessage():
      added second optional parameter: $sql_query
    * tbl_change.php: make use of new second PMA_showMessage() parameter

2006-12-15 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, libraries/common.lib.php, config.default.php:
      bug #1615313, doc referred to HTTP so enable the code to accept
      either HTTP or http as auth_type

2006-12-15 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2006-12-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_export.lib.php, /common.lib.php, lang/*:
      bug #1607282, bug in older MySQL removes auto_increment when asking
      for MYSQL40 compatibility mode
