@@ -5,6 +5,10 @@ phpMyAdmin - ChangeLog
 $Id$
 $HeadURL$
 
+2006-12-29 Marc Delisle  <lem9@users.sourceforge.net>
+    * tbl_relation.php: RFE #1621025, show SQL statement in Relation View
+      (I only implemented the display of InnoDB-related statements)
+
 2006-12-27 Marc Delisle  <lem9@users.sourceforge.net>
     * Documentation.html, libraries/common.lib.php: patch #1592366,
      possibility of using the host name as a parameter in the URL,
